# ai-agent-deep-dive

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-product-overview.md  01-system-prompt-and-orchestration.md  02-tools-permissions-and-execution.md  03-skills-plugins-mcp.md  04-memory-and-session.md  05-commands-ui-and-operator-experience.md  06-verification-and-quality.md  07-architecture-map.md  08-agent-runtime-loop.md  09-message-model-and-state.md  10-context-management.md  11-task-model.md  12-workspace-and-isolation.md  13-failure-recovery.md  14-configuration-system.md  15-mvp-scope.md  16-python-implementation-notes.md  README.md
src/agt/: __init__.py  agent.py  cli.py
tests/: test_agent.py  test_cli.py
